# Add an option to build or not build the FltkImageViewer Library


IF(OTB_USE_VISU_GUI)
        IF(NOT OTB_USE_EXTERNAL_FLTK)
            MESSAGE(STATUS "Configuring FLTK...")
	        ADD_SUBDIRECTORY( FLTK )
        ENDIF(NOT OTB_USE_EXTERNAL_FLTK)
ENDIF(OTB_USE_VISU_GUI)

IF(NOT OTB_USE_EXTERNAL_ITK)
  IF(NOT OTB_USE_DEPRECATED)
    SET(GDCM_LEGACY_REMOVE ON)
  ENDIF(NOT OTB_USE_DEPRECATED)
  MESSAGE(STATUS "Configuring ITK...")
  ADD_SUBDIRECTORY(ITK)
  MARK_AS_ADVANCED(FFTW_INCLUDE_PATH)
  MARK_AS_ADVANCED(FFTWF_THREADS_LIB)
  MARK_AS_ADVANCED(FFTWD_THREADS_LIB)
  MARK_AS_ADVANCED(ITK_USE_KWSTYLE)
ENDIF(NOT OTB_USE_EXTERNAL_ITK)

IF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
  MESSAGE(STATUS "Configuring otbopenthreads...")
  ADD_SUBDIRECTORY( otbopenthreads )
ENDIF(NOT OTB_USE_EXTERNAL_OPENTHREADS)


IF(OTB_USE_LIBLAS)
IF(NOT OTB_USE_EXTERNAL_LIBLAS)
  MESSAGE(STATUS "Configuring otbliblas...")
  ADD_SUBDIRECTORY( otbliblas )
ENDIF(NOT OTB_USE_EXTERNAL_LIBLAS)
ENDIF(OTB_USE_LIBLAS)

IF(OTB_USE_JPEG2000)
  SET(L_BUILD_TESTING BUILD_TESTING)
  SET(BUILD_TESTING OFF)
  MESSAGE(STATUS "Configuring otbopenjpeg...")
  ADD_SUBDIRECTORY( otbopenjpeg )
  SET(BUILD_TESTING L_BUILD_TESTING)
ENDIF(OTB_USE_JPEG2000)


IF(NOT OTB_USE_EXTERNAL_EXPAT)
    MESSAGE(STATUS "Configuring otbexpat...")
	ADD_SUBDIRECTORY( otbexpat )
ENDIF(NOT OTB_USE_EXTERNAL_EXPAT)

IF(NOT OTB_USE_EXTERNAL_BOOST)
  MESSAGE(STATUS "Configuring internal Boost...")
  ADD_SUBDIRECTORY(BGL)
ENDIF(NOT OTB_USE_EXTERNAL_BOOST)

MESSAGE(STATUS "Configuring otbsvm...")
ADD_SUBDIRECTORY(otbsvm )

MESSAGE(STATUS "Configuring InsightJournal...")
ADD_SUBDIRECTORY(InsightJournal)

IF(NOT OTB_USE_EXTERNAL_OSSIM)
  MESSAGE(STATUS "Configuring otbossim...")
  ADD_SUBDIRECTORY(otbossim)
ENDIF(NOT OTB_USE_EXTERNAL_OSSIM)

MESSAGE(STATUS "Configuring otbossimplugins...")
ADD_SUBDIRECTORY(otbossimplugins)

MESSAGE(STATUS "Configuring otb6S...")
ADD_SUBDIRECTORY(otb6S)

IF(NOT OTB_USE_EXTERNAL_TINYXML)
  MESSAGE(STATUS "Configuring tinyXMLlib...")
  ADD_SUBDIRECTORY(tinyXMLlib)
ENDIF(NOT OTB_USE_EXTERNAL_TINYXML)

IF(NOT OTB_USE_EXTERNAL_MUPARSER)
  MESSAGE(STATUS "Configuring otbmuparser...")
  ADD_SUBDIRECTORY(otbmuparser)
ENDIF(NOT OTB_USE_EXTERNAL_MUPARSER)

IF(NOT OTB_USE_EXTERNAL_LIBKML)
  MESSAGE(STATUS "Configuring otbkml...")
  ADD_SUBDIRECTORY(otbkml)
ENDIF(NOT OTB_USE_EXTERNAL_LIBKML)

MESSAGE(STATUS "Configuring otbedison...")
ADD_SUBDIRECTORY(otbedison)

IF(OTB_USE_SIFTFAST)
  MESSAGE(STATUS "Configuring otbsiftfast...")
  ADD_SUBDIRECTORY(otbsiftfast)
ENDIF(OTB_USE_SIFTFAST)

MESSAGE(STATUS "Configuring otbconfigfile...")
ADD_SUBDIRECTORY(otbconfigfile)

IF(WIN32)
MESSAGE(STATUS "Configuring otbmsinttypes...")
ADD_SUBDIRECTORY(otbmsinttypes)
ENDIF(WIN32)

IF(BUILD_TESTING)
        ADD_SUBDIRECTORY( Dart )
ENDIF(BUILD_TESTING)


#-----------------------------------------------------------------------------
# Install the UseOTB.cmake file configured from the top-level.
IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
  INSTALL(FILES ${OTB_BINARY_DIR}/Utilities/OTBConfig.cmake
    DESTINATION ${OTB_INSTALL_PACKAGE_DIR}
    COMPONENT Development)
ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
