
# Sources of non-templated classes.
FILE(GLOB 6S_SRCS "*.cxx" )

ADD_LIBRARY(RSR6s ${6S_SRCS})
TARGET_LINK_LIBRARIES (RSR6s OTBCommon  OTBIO OTBRadiometry)

INSTALL(TARGETS RSR6s
RUNTIME DESTINATION ${RSR_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
LIBRARY DESTINATION ${RSR_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
ARCHIVE DESTINATION ${RSR_INSTALL_LIB_DIR} COMPONENT Development)

FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")

INSTALL(FILES ${__files1} ${__files2}
    DESTINATION ${RSR_INSTALL_INCLUDE_DIR}
    COMPONENT Development)